Change trigger branches for Cordova build workflow

--- a/.github/workflows/build-cordova-android.yml
+++ b/.github/workflows/build-cordova-android.yml
@@ -3,7 +3,7 @@ name: Build Cordova Android APK
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ add/cordova-project ]
   workflow_dispatch:
 
 jobs:
